Working on seller/client select to trigger a filter string redirect url. Somehow the ID is being too long

--- a/template/BankingCart.html
+++ b/template/BankingCart.html
@@ -190,6 +190,11 @@
 				}
 			); 
     	});    	
+    	
+    	// user filters
+    	j$('select#seller_filter').change(function(){
+    		window.location = '{{url}}?seller='+j$(this).val();
+    	});
     });    
 </script>
 {% endblock %}
