--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1527,6 +1527,7 @@ input{
 	border-bottom:1px solid #beceee;
 	width:200px;
 	padding:0 20px;
+	vertical-align:top;
 }
 .table-row-border thead td{
 	border-bottom:1px solid #cc8;
@@ -1540,7 +1541,7 @@ input{
 .table-row-border thead td{
 	font-weight:bold;
 	font-family: ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
-	text-align:center;	
+	text-align:left;	
 }
 
 .sf-table{
@@ -1548,6 +1549,12 @@ input{
 	border:none;
 	margin-left:auto;
 	margin-right:auto;
+	width:90%;
+}
+.sf-table td{
+	vertical-align:top;
+	min-width:100px;
+	max-width:200px;
 }
 .sf-table tr:last-child td{
 	border:none;
@@ -1559,6 +1566,7 @@ input{
     /*border-bottom: none;*/
 	font-weight:bold;
 	text-align:right;
+	padding-right:20px;
 }
 .command-link{
 	text-decoration:underline;
